add Project class

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,7 @@
     <title>TOP To-Do List Project</title>
 </head>
 <body>
-
+    <h1>Task Tracker</h1>
+    <div id="projects-container"></div>
 </body>
 </html>
